Application d'un z-index sur le header + suppression balise inutile + bugfixes

--- a/css/styleUserBleu&Orange.css
+++ b/css/styleUserBleu&Orange.css
@@ -1,3 +1,4 @@
+
 /***************MAIN/CONTENT************/
 /*.mainUserCarte {
     position: relative;
@@ -22,11 +23,11 @@
 
 /***bouton soutien dans userCarte****/
 
-  /*  #SoutienImg {
+    /*#SoutienImg {
         height: 55px;
         width: 55px;
-    }
-*/
+    }*/
+
 
     /********FORM SIGNALER****************/
 
