--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -76,3 +76,8 @@ $mainfontcolor: rgb(34, 112, 155);
 #doigtContactImg {
     height: 70px;
 }
+
+#SoutienImg {
+    height: 55px;
+    width: 55px;
+}
