--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,6 +44,7 @@ a {
     right: 0;
     height: 66px;
     line-height: 66px;
+    z-index: 50;
     color: $header-font-color;
     background-color: $header-bg;
     font-weight: bold;
